# mosqueclock

android/app/lib/src/main/java/org/cassowary/athancalculator/: AsrRule.kt  Athans.kt  DegreeMaths.kt  EventSelector.kt  Location.kt  Method.kt  SunTimesCalculator.kt  ThuhrSetting.kt  computer.kt
hs/: cabal.project
hs/lib/athan-calculator/: LICENSE  athan-calculator.cabal  default.nix
hs/lib/athan-calculator-comparison-tests/: athan-calculator-comparison-tests.cabal  default.nix
hs/lib/athan-calculator-comparison-tests/test/: DateTestUtils.hs
hs/lib/athan-calculator-comparison-tests/test/kotlin/: Main.hs  Unimplemented.hs
hs/lib/athan-calculator/cbits/: e_atan2.c  fdlibm.h  readme  s_atan.c  s_cos.c  s_sin.c  s_tan.c  w_acos.c  w_asin.c  w_atan2.c
hs/lib/athan-calculator/src/Astronomy/: SunRiseTimes.hs
hs/lib/athan-calculator/src/Data/: Angle.hs
hs/lib/athan-calculator/src/Data/Text/: Show.hs
hs/lib/athan-calculator/src/Data/Time/: Convenience.hs
hs/lib/athan-calculator/src/Geography/: Coordinates.hs
hs/lib/athan-calculator/src/Iqama/: Athan.hs  Iqama.hs  Jummah.hs  RunAll.hs
hs/lib/athan-calculator/src/Mathematics/: Fdlibm.hs
hs/lib/athan-calculator/test/: Spec.hs  sunpos.c
