cabal-version:      >=1.10
name:               athan-calculator
version:            0.1.0.0
license:            AGPL3
license-file:       LICENSE
maintainer:         tristan@cassowary.org
author:             Tristan Mc Leay
synopsis:           athan time calculations
category:           Real World
build-type:         Simple
extra-source-files: ChangeLog.md

library
    exposed-modules:
        Data.Angle
        Iqama.Athan
        Iqama.Iqama
        Iqama.Jummah
        Iqama.RunAll
        Data.Text.Show
        Data.Time.Convenience
        Geography.Coordinates
        Astronomy.SunRiseTimes
        Mathematics.Fdlibm

    cc-options:         -Werror
    c-sources:
        cbits/e_rem_pio2.c
        cbits/k_cos.c
        cbits/s_cos.c
        cbits/k_rem_pio2.c
        cbits/k_standard.c
        cbits/s_lib_version.c
        cbits/s_matherr.c
        cbits/k_tan.c
        cbits/s_tan.c
        cbits/k_sin.c
        cbits/s_sin.c
        cbits/e_asin.c
        cbits/w_asin.c
        cbits/e_acos.c
        cbits/w_acos.c
        cbits/s_atan.c
        cbits/e_atan2.c
        cbits/w_atan2.c

    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: OverloadedStrings
    ghc-options:        -Wall -Werror -Wno-error=unused-top-binds
    build-depends:
        base,
        time,
        timezone-series,
        text,
        aeson

test-suite iqama-wallclock-test
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    c-sources:
        test/sunpos.c
        cbits/e_rem_pio2.c
        cbits/k_cos.c
        cbits/s_cos.c
        cbits/k_rem_pio2.c
        cbits/k_standard.c
        cbits/s_lib_version.c
        cbits/s_matherr.c
        cbits/k_tan.c
        cbits/s_tan.c
        cbits/k_sin.c
        cbits/s_sin.c
        cbits/e_asin.c
        cbits/w_asin.c
        cbits/e_acos.c
        cbits/w_acos.c
        cbits/s_atan.c
        cbits/e_atan2.c
        cbits/w_atan2.c

    hs-source-dirs:     test
    other-modules:      DateTestUtils
    default-language:   Haskell2010
    default-extensions: OverloadedStrings
    include-dirs:       cbits
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
    build-depends:
        base,
        athan-calculator,
        hspec,
        hedgehog,
        time,
        timezone-series
